fix(SignUp): adjusting spacing at the top

--- a/src/pages/SignUp/styles.module.scss
+++ b/src/pages/SignUp/styles.module.scss
@@ -66,6 +66,7 @@
 
     & > section {
       h1 {
+        margin-top: 30px;
         font-size: 2rem;
         line-height: 2rem;
       }
